GNOME Bugzilla – Bug 644142
StTextureCache: never return fullcolor icons for ST_ICON_SYMBOLIC
Last modified: 2011-03-08 14:38:21 UTC
This is a problem in F14 at least (the panel icon gets a Fedora logo and the Applications icon gets a Fedora-themed applications icon)
Created attachment 182732 [details] [review] StTextureCache: never return fullcolor icons for ST_ICON_SYMBOLIC g_themed_icon_new_with_default_fallbacks() does not do what we want with symbolic icons; if the user's icon theme is not "gnome", then it will end up preferring a non-symbolic icon from the higher-level theme over a symbolic icon from gnome-icon-theme-symbolic. If the shell requests a symbolic icon, and there is only a non-symbolic icon available, that should be considered a programmer error, just like requesting a non-existent icon name. So change the code to only look up "-symbolic" names when drawing an ST_ICON_SYMBOLIC icon.
Review of attachment 182732 [details] [review]: Seems fine to me
Attachment 182732 [details] pushed as 026fc53 - StTextureCache: never return fullcolor icons for ST_ICON_SYMBOLIC